--- a/notebook/01_data_exploration.ipynb
+++ b/notebook/01_data_exploration.ipynb
@@ -288,7 +288,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2299c28d090>"
+       "<matplotlib.legend.Legend at 0x146ed82d090>"
       ]
      },
      "execution_count": 4,
@@ -494,7 +494,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "430c4472-fe66-4031-a9f3-343415da2649",
+   "id": "0bc74908-1fb3-402e-8947-b1874a6aa504",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee0b9b65-b216-43b7-8ac6-e402fa139973",
    "metadata": {},
    "outputs": [],
    "source": []
